<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titleFrom">From</string>
    <string name="titleTo">To</string>
    <string name="bttConvert">Convert</string>
    <string name="bttDefaultFrom">USD</string>
    <string name="bttDefaultTo">COP</string>
    <string name="find_hint">Search…</string>
    <string-array name="currenciesArray">
        <!-- Currency Items -->                                         
		<item>ALL - Albanian Lek</item>
		<item>DZD - Algerian Dinar</item>
		<item>ARS - Argentine Peso</item>
		<item>AWG - Aruba Florin</item>
		<item>AUD - Australian Dollar</item>
		<item>BSD - Bahamian Dollar</item>
		<item>BHD - Bahraini Dinar</item>
		<item>BDT - Bangladesh Taka</item>
		<item>BBD - Barbados Dollar</item>
		<item>BZD - Belize Dollar</item>
		<item>BMD - Bermuda Dollar</item>
		<item>BTN - Bhutan Ngultrum</item>
		<item>BOB - Bolivian Boliviano</item>
		<item>BWP - Botswana Pula</item>
		<item>BRL - Brazilian Real</item>
		<item>GBP - British Pound</item>
		<item>BND - Brunei Dollar</item>
		<item>BIF - Burundi Franc</item>
		<item>XOF - CFA Franc (BCEAO)</item>
		<item>XAF - CFA Franc (BEAC)</item>
		<item>KHR - Cambodia Riel</item>
		<item>CAD - Canadian Dollar</item>
		<item>CVE - Cape Verde Escudo</item>
		<item>KYD - Cayman Islands Dollar</item>
		<item>CLP - Chilean Peso</item>
		<item>CNY - Chinese Yuan</item>
		<item>COP - Colombian Peso</item>
		<item>KMF - Comoros Franc</item>
		<item>CRC - Costa Rica Colon</item>
		<item>HRK - Croatian Kuna</item>
		<item>CUP - Cuban Peso</item>
		<item>CYP - Cyprus Pound</item>
		<item>CZK - Czech Koruna</item>
		<item>DKK - Danish Krone</item>
		<item>DJF - Dijibouti Franc</item>
		<item>DOP - Dominican Peso</item>
		<item>XCD - East Caribbean Dollar</item>
		<item>EGP - Egyptian Pound</item>
		<item>SVC - El Salvador Colon</item>
		<item>EEK - Estonian Kroon</item>
		<item>ETB - Ethiopian Birr</item>
		<item>EUR - Euro</item>
		<item>FKP - Falkland Islands Pound</item>
		<item>GMD - Gambian Dalasi</item>
		<item>GHC - Ghanian Cedi</item>
		<item>GIP - Gibraltar Pound</item>
		<item>XAU - Gold Ounces</item>
		<item>GTQ - Guatemala Quetzal</item>
		<item>GNF - Guinea Franc</item>
		<item>GYD - Guyana Dollar</item>
		<item>HTG - Haiti Gourde</item>
		<item>HNL - Honduras Lempira</item>
		<item>HKD - Hong Kong Dollar</item>
		<item>HUF - Hungarian Forint</item>
		<item>ISK - Iceland Krona</item>
		<item>INR - Indian Rupee</item>
		<item>IDR - Indonesian Rupiah</item>
		<item>IQD - Iraqi Dinar</item>
		<item>ILS - Israeli Shekel</item>
		<item>JMD - Jamaican Dollar</item>
		<item>JPY - Japanese Yen</item>
		<item>JOD - Jordanian Dinar</item>
		<item>KZT - Kazakhstan Tenge</item>
		<item>KES - Kenyan Shilling</item>
		<item>KRW - Korean Won</item>
		<item>KWD - Kuwaiti Dinar</item>
		<item>LAK - Lao Kip</item>
		<item>LVL - Latvian Lat</item>
		<item>LBP - Lebanese Pound</item>
		<item>LSL - Lesotho Loti</item>
		<item>LRD - Liberian Dollar</item>
		<item>LYD - Libyan Dinar</item>
		<item>LTL - Lithuanian Lita</item>
		<item>MOP - Macau Pataca</item>
		<item>MKD - Macedonian Denar</item>
		<item>MGF - Malagasy Franc</item>
		<item>MWK - Malawi Kwacha</item>
		<item>MYR - Malaysian Ringgit</item>
		<item>MVR - Maldives Rufiyaa</item>
		<item>MTL - Maltese Lira</item>
		<item>MRO - Mauritania Ougulya</item>
		<item>MUR - Mauritius Rupee</item>
		<item>MXN - Mexican Peso</item>
		<item>MDL - Moldovan Leu</item>
		<item>MNT - Mongolian Tugrik</item>
		<item>MAD - Moroccan Dirham</item>
		<item>MZM - Mozambique Metical</item>
		<item>MMK - Myanmar Kyat</item>
		<item>NAD - Namibian Dollar</item>
		<item>NPR - Nepalese Rupee</item>
		<item>ANG - Neth Antilles Guilder</item>
		<item>NZD - New Zealand Dollar</item>
		<item>NIO - Nicaragua Cordoba</item>
		<item>NGN - Nigerian Naira</item>
		<item>KPW - North Korean Won</item>
		<item>NOK - Norwegian Krone</item>
		<item>OMR - Omani Rial</item>
		<item>XPF - Pacific Franc</item>
		<item>PKR - Pakistani Rupee</item>
		<item>XPD - Palladium Ounces</item>
		<item>PAB - Panama Balboa</item>
		<item>PGK - Papua New Guinea Kina</item>
		<item>PYG - Paraguayan Guarani</item>
		<item>PEN - Peruvian Nuevo Sol</item>
		<item>PHP - Philippine Peso</item>
		<item>XPT - Platinum Ounces</item>
		<item>PLN - Polish Zloty</item>
		<item>QAR - Qatar Rial</item>
		<item>ROL - Romanian Leu</item>
		<item>RUB - Russian Rouble</item>
		<item>WST - Samoa Tala</item>
		<item>STD - Sao Tome Dobra</item>
		<item>SAR - Saudi Arabian Riyal</item>
		<item>SCR - Seychelles Rupee</item>
		<item>SLL - Sierra Leone Leone</item>
		<item>XAG - Silver Ounces</item>
		<item>SGD - Singapore Dollar</item>
		<item>SKK - Slovak Koruna</item>
		<item>SIT - Slovenian Tolar</item>
		<item>SBD - Solomon Islands Dollar</item>
		<item>SOS - Somali Shilling</item>
		<item>ZAR - South African Rand</item>
		<item>LKR - Sri Lanka Rupee</item>
		<item>SHP - St Helena Pound</item>
		<item>SDD - Sudanese Dinar</item>
		<item>SRG - Surinam Guilder</item>
		<item>SZL - Swaziland Lilageni</item>
		<item>SEK - Swedish Krona</item>
		<item>TRY - Turkey Lira</item>
		<item>CHF - Swiss Franc</item>
		<item>SYP - Syrian Pound</item>
		<item>TWD - Taiwan Dollar</item>
		<item>TZS - Tanzanian Shilling</item>
		<item>THB - Thai Baht</item>
		<item>TOP - Tonga Pa anga</item>
		<item>TTD - Trinidad And Tobago Dollar</item>
		<item>TND - Tunisian Dinar</item>
		<item>TRL - Turkish Lira</item>
		<item>USD - U.S. Dollar</item>
		<item>AED - UAE Dirham</item>
		<item>UGX - Ugandan Shilling</item>
		<item>UAH - Ukraine Hryvnia</item>
		<item>UYU - Uruguayan New Peso</item>
		<item>VUV - Vanuatu Vatu</item>
		<item>VEB - Venezuelan Bolivar</item>
		<item>VND - Vietnam Dong</item>
		<item>YER - Yemen Riyal</item>
		<item>YUM - Yugoslav Dinar</item>
		<item>ZMK - Zambian Kwacha</item>
		<item>ZWD - Zimbabwe Dollar</item>
    </string-array>
</resources>