<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bttFrom"
        android:layout_alignLeft="@+id/bttConvert"
        android:layout_alignRight="@+id/bttConvert"
        android:ems="10"
        android:fontFamily="true"
        android:inputType="number" />

    <requestFocus />

    <Button
        android:id="@+id/bttFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFrom"
        android:layout_below="@+id/tvFrom"
        android:layout_marginTop="14dp"
        android:onClick="currencyFrom"
        android:text="@string/bttDefaultFrom" />

    <Button
        android:id="@+id/bttTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bttConvert"
        android:layout_alignBottom="@+id/bttConvert"
        android:layout_alignRight="@+id/bttFrom"
        android:onClick="currencyTo"
        android:text="@string/bttDefaultTo" />

    <Button
        android:id="@+id/bttConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/tvTo"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/bttTo"
        android:onClick="convert"
        android:text="@string/bttConvert" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/titleFrom"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttFrom"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/titleTo"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="none"
        android:visibility="invisible" >
    </EditText>

</RelativeLayout>